# rabbids

./: .gitignore  Cargo.toml  README.md  rabbids.org  rabbids_mem_attack.erl
netsplit/: README.md  cleanup.sh  gobetween.toml  rabbitmq.conf  setup.sh  split.sh  unsplit.sh
src/: docker.rs  input.rs  main.rs
