[package]
name = "rabbids"
description = "Chaos testing for applications against dynamic RabbitMQ clusters"
version = "0.1.0"
authors = ["LOU Xun <aquarhead@ela.build>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
crossterm = "0.17"
tui = { version = "0.9", default-features = false, features = ['crossterm'] }
